--- a/rs_backend/Cargo.toml
+++ b/rs_backend/Cargo.toml
@@ -13,3 +13,5 @@ futures-util = "0.3.31"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 mime_guess = "2.0.5"
+jsonwebtoken = "9.3.1"
+once_cell = "1.21.3"
